--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
 <h1 class="glow1">Games</h1>
 
-<a href="https://thedarkcoder4.github.io/MineSweeper.mhtml" download>MineSweeper</a>
+<a href="https://thedarkcoder.github.io/MineSweeper.mhtml" download>MineSweeper</a>
 
     </body>
 </html>
