--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </style>
     </head>
     <body>
-<h1 class="glow1">Games</h1>
+<h1 class="glow1">Games 4 me</h1>
 
 <a href="https://thedarkcoder.github.io/MineSweeper.mhtml" download>MineSweeper</a>
 
