--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="shortcut icon" href="https://thedarkcoder.github.io/favicon.ico"/>
+        <link rel="icon" href="https://thedarkcoder.github.io/favicon.ico"/>
         <title>Games</title>
         <style>
         body {background-color: black; text-align: center; margin: 0px;}
