--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
         <title>Games</title>
         <style>
-        body {background-color: black; text-align: center; margin: 0px;}
+        body {background-color: black; text-align: center; margin: 0px; cursor: url(https://thedarkcoder.gitub.io/cursorfor.png), auto;}
         
         .glow1 {color: rgb(64, 255, 0); text-shadow: 0px 0px 7px rgb(64, 255, 0);}
         
