--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <h1 class="glow1" id="head">Games</h1>
 
 <p id="firstp">Welcome to my gaming site!</p>
-<p>This site is only for Cormac, so pleas, if you are not him, GIT OFF!</p>
+<p>This site is only for me, so please, if you are not him, GIT OFF!</p>
 </div>
     </body>
 </html>
