--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <p id="firstp">Welcome to my gaming site!</p>
 <p>This site is only for me, so please, if you are not him, GIT OFF!</p>
-<a href="/dino.html">T-rex runner</a>
+<a href="/dino.html">T-rex runner</a><br>
     <a href="/dinoV2">T-rex runner custom</a>
 </div>
     </body>
