--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </head>
     <body>
 <div id="border">
-<h1 class="glow1" id="head">Games</h1><br>
+<h1 class="glow1" id="head">Games</h1>
 
-<p id="firstp">Welcome to my gaming site!</p><br>
+<p id="firstp">Welcome to my gaming site!</p>
 <p>This site is only for me, so please, if you are not him, GIT OFF!</p><br>
 <a href="/dino.html">T-rex runner</a><br>
     <a href="/dinoV2">T-rex runner custom</a>
