--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div id="border">
 <h1 class="glow1" id="head">Games</h1>
 
-<p id="firstp">Welcome to my gaming site!</p>
+<p id="firstp">Welcome to my gaming site!</p><br>
 <p>This site is only for me, so please, if you are not him, GIT OFF!</p><br>
 <a href="/dino.html">T-rex runner</a><br>
     <a href="/dinoV2">T-rex runner custom</a>
