--- a/dinoV2.html
+++ b/dinoV2.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="in.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
     <script src="ja.js"></script>
+    <style>
+        body {color: #40ff00;}
+    </style>
 </head>
 
 <body id="t" class="offline" style="background: black;">
