--- a/dinoV2.html
+++ b/dinoV2.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
     <script src="ja.js"></script>
     <style>
-        body {color: #40ff00;}
+        h1 {color: #40ff00;}
     </style>
 </head>
 
