--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
         <title>Cursor</title>
         <style>
-        body {cursor: url(https://lh3.googleusercontent.com/CN2uv78hDRfikvdb37y9BCvtldsrl294aqRJh2f82zbOOTDOwoo-S7LAw6-kNxxQ6oHVI9mHkDpFBdGRxqvzrAvY-zI46l31t5hOWREP51NBig57jQd_zwHkBTbuhRYCU6buortLd2jK1F3AT-VAP9Q_cuZgkaCRjdwRNhaNxaxuziexlCgxL4EeqrrWG9xbbzAHzqOoW01SiV1OCR5aZAD-nZy4FY8NdQVZWSwiPgySly1R6XneDscUhRHAGGLkQqbrP8LHMYtKMVmDpsn91MDY3KNLsmL1H7oys1PWaedH7E9D0IOyaefz1WwKO3e94dC6XqKhm6PPQ2MksZMiu2w1QrbvgYWwPoWw56VZtJ1z6OxHgV15gS6ZF6ydu-ZkCSraW83aucr8T94sOUl4x36_Lq_c8F3V2LlOE18qUPixAVrqy9gEBVfqx3jm1i1j14f8VyFEwhIldD7OK6kUVj2qO_fDdvlVFWPn8n42DjcLjaVxIDv4_Hg1AR0xquUYu7RIavJalPL2aQenuU-B0zMLQP8AhYwt5SoKFP0UnjSKFFstPb2sRNd4lCyrj-KjgRE1AAeKqMogxmILPOAlIQ8BPDmo9NFzCjl03XD11PgDK-n46UNBVuqAa4W7PLdYZX8RXpzmdJVZ9n2dsyRTSqSsd0gaOOJZJCjd7x6J3C85PsIyZA53X5bKQ7H5e3kCzdVB29nae59_-cW1N051GdQ=s17-no), auto; display: inline-block;}    
+            h1 {color: #10a2ff;}
+        body {background-color: black; cursor: url(https://lh3.googleusercontent.com/CN2uv78hDRfikvdb37y9BCvtldsrl294aqRJh2f82zbOOTDOwoo-S7LAw6-kNxxQ6oHVI9mHkDpFBdGRxqvzrAvY-zI46l31t5hOWREP51NBig57jQd_zwHkBTbuhRYCU6buortLd2jK1F3AT-VAP9Q_cuZgkaCRjdwRNhaNxaxuziexlCgxL4EeqrrWG9xbbzAHzqOoW01SiV1OCR5aZAD-nZy4FY8NdQVZWSwiPgySly1R6XneDscUhRHAGGLkQqbrP8LHMYtKMVmDpsn91MDY3KNLsmL1H7oys1PWaedH7E9D0IOyaefz1WwKO3e94dC6XqKhm6PPQ2MksZMiu2w1QrbvgYWwPoWw56VZtJ1z6OxHgV15gS6ZF6ydu-ZkCSraW83aucr8T94sOUl4x36_Lq_c8F3V2LlOE18qUPixAVrqy9gEBVfqx3jm1i1j14f8VyFEwhIldD7OK6kUVj2qO_fDdvlVFWPn8n42DjcLjaVxIDv4_Hg1AR0xquUYu7RIavJalPL2aQenuU-B0zMLQP8AhYwt5SoKFP0UnjSKFFstPb2sRNd4lCyrj-KjgRE1AAeKqMogxmILPOAlIQ8BPDmo9NFzCjl03XD11PgDK-n46UNBVuqAa4W7PLdYZX8RXpzmdJVZ9n2dsyRTSqSsd0gaOOJZJCjd7x6J3C85PsIyZA53X5bKQ7H5e3kCzdVB29nae59_-cW1N051GdQ=s17-no), auto; display: inline-block;}    
         </style>
     </head>
     <body>
