--- a/CP.html
+++ b/CP.html
@@ -1,19 +1,4 @@
-From: <Saved by Blink>
-Snapshot-Content-Location: https://cponline.pw/play/#
-Subject: Club Penguin Online - The New Club Penguin
-Date: Mon, 25 Feb 2019 17:34:57 -0000
-MIME-Version: 1.0
-Content-Type: multipart/related;
-	type="text/html";
-	boundary="----MultipartBoundary--1yAmYbFSAO2uEuHbFVjH8hIDUIAgDDSocvUfg84l3O----"
-
-
-------MultipartBoundary--1yAmYbFSAO2uEuHbFVjH8hIDUIAgDDSocvUfg84l3O----
-Content-Type: text/html
-Content-ID: <frame-44D29114462C3544EC2D4CC2FA4BA62C@mhtml.blink>
-Content-Transfer-Encoding: quoted-printable
-Content-Location: https://cponline.pw/play/#
-
+<!DOCTYPE html>
 <html lang=3D"en" class=3D"gr__cponline_pw"><head><meta http-equiv=3D"Conte=
 nt-Type" content=3D"text/html; charset=3DUTF-8">
 =09
