--- a/cut.html
+++ b/cut.html
@@ -5,9 +5,9 @@
         <meta charset="utf-8">
         <title>Cut The Rope 2</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script defer type="text/javascript" src="https://i1.silvergames.com/js/jquery-2.1.1.min.js"></script>
-        <script defer type="text/javascript" src="https://i1.silvergames.com/js/4/iframe.min.js"></script>
-        <link rel="canonical" href="https://www.silvergames.com/en/cut-the-rope-2">
+        <script defer type="text/javascript" src="http://safehamster.herokuapp.com/proxy/https://i1.silvergames.com/js/jquery-2.1.1.min.js"></script>
+        <script defer type="text/javascript" src="http://safehamster.herokuapp.com/proxy/https://i1.silvergames.com/js/4/iframe.min.js"></script>
+        <link rel="canonical" href="http://safehamster.herokuapp.com/proxy/https://www.silvergames.com/en/cut-the-rope-2">
         
         <style>
             a,body,div,img,p,span,li,ul,iframe{margin:0;padding:0;border:0;}
@@ -30,6 +30,6 @@
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW"/>
 </head>
     <body>
-        <div id="ima" style="position:absolute;"></div ><div id="game_embed" data-type="iframe" data-iframe-src="" data-src="aHR0cHM6Ly9nYW1lcy5nYW1lcGl4LmNvbS9wbGF5LzQwMjE0P3NpZD0xMTA3Mjc=" data-scrolling="no" data-fullscreen="ratio" data-preroll="0" data-prerolltype="" ><div id="game_embed_button_icon"><img src="https://i3.silvergames.com/p/b/cut-the-rope-2.png" alt="Cut The Rope 2" width="200" height="200"><br><button id="play_game"><span>PLAY NOW</span></button></div></div >
+        <div id="ima" style="position:absolute;"></div ><div id="game_embed" data-type="iframe" data-iframe-src="" data-src="aHR0cHM6Ly9nYW1lcy5nYW1lcGl4LmNvbS9wbGF5LzQwMjE0P3NpZD0xMTA3Mjc=" data-scrolling="no" data-fullscreen="ratio" data-preroll="0" data-prerolltype="" ><div id="game_embed_button_icon"><img src="http://safehamster.herokuapp.com/proxy/https://i3.silvergames.com/p/b/cut-the-rope-2.png" alt="Cut The Rope 2" width="200" height="200"><br><button id="play_game"><span>PLAY NOW</span></button></div></div >
     </body>
 </html>
