--- a/dinoV2.html
+++ b/dinoV2.html
@@ -11,6 +11,10 @@
     <script src="ja.js"></script>
     <style>
         h1 {color: #40ff00;}
+        h1 {cursor: url(https://raw.githubusercontent.com/TheDarkCoder/TheDarkCoder.github.io/master/cusor6text.png), auto; display: inline-block; text-align: center;}    
+                 
+#messageBox  {text-align: center;}
+        body {cursor: url(https://raw.githubusercontent.com/TheDarkCoder/TheDarkCoder.github.io/master/cursorsix.png), auto;}
     </style>
 </head>
 
