--- a/dinoV2.html
+++ b/dinoV2.html
@@ -12,7 +12,7 @@
     <style>
         h1 {color: #40ff00;}
         h1 {cursor: url(https://raw.githubusercontent.com/TheDarkCoder/TheDarkCoder.github.io/master/cusor6text.png), auto; display: inline-block; text-align: center;}    
-                 
+        ::selection {background-color:#41ff00; color:black; text-shadow: 0px 0px 2px black;}
 #messageBox  {text-align: center;}
         body {cursor: url(https://raw.githubusercontent.com/TheDarkCoder/TheDarkCoder.github.io/master/cursorsix.png), auto;}
     </style>
