--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 <p id="firstp">Welcome to my gaming site!</p><br>
 <p>This site is only for me, so please, if you are not him, GIT OFF!</p><br>
 <a href="/dino.html">T-rex runner</a><br>
-    <a href="/dinoV2">T-rex runner custom</a>
+    <a href="/dinoV2">T-rex runner custom</a><br>
+    <a href="/mar/index.html">Mario</a>
 </div>
     </body>
 </html>
