--- a/portal.html
+++ b/portal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Portal flash</title>
  <style>
         h1 {color: #40ff00;}
         h1 {cursor: url(https://raw.githubusercontent.com/TheDarkCoder/TheDarkCoder.github.io/master/cusor6text.png), auto; display: inline-block; text-align: center;}    
