--- a/portal.html
+++ b/portal.html
@@ -3,14 +3,17 @@
 <head>
 <title>Portal flash</title>
  <style>
-        h1 {color: #40ff00;}
+        h1, a {color: #40ff00;}
+  a {cursor: url(https://raw.githubusercontent.com/TheDarkCoder/TheDarkCoder.github.io/master/cursor6pointer.png), auto; display: inline-block;}
         h1 {cursor: url(https://raw.githubusercontent.com/TheDarkCoder/TheDarkCoder.github.io/master/cusor6text.png), auto; display: inline-block; text-align: center;}    
         ::selection {background-color:#41ff00; color:black; text-shadow: 0px 0px 2px black;}
 #messageBox  {text-align: center;}
+  #ji {margin-left: 0px; margin-right: 0px; display: inline-block;}
         body, div, embed, param  {cursor: url(https://raw.githubusercontent.com/TheDarkCoder/TheDarkCoder.github.io/master/cursorsix.png), auto; background-color: black; padding: 0px; margin: 0px;}
     </style>
 </head>
 <body>
+ <a href="/hacks.txt" id="ji"></a>
 <div class="wsite-flash"><div style="text-align: center;" title="Flash: portal_the_flash_version_2.swf" > <object type="application/x-shockwave-flash" codebase="//download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" align="middle" height="664px" width="1180px" > <param name="movie" value="/uploads/1/1/9/1/119189202/portal_the_flash_version_2.swf"> <param name="quality" value="high"> <param name="play" value="true"> <param name="loop" value="true"> <param name="wmode" value="transparent"> <param name="allowFullScreen" value="true"> <param name="flashvars" value=""> <embed src="https://asdfghjkjhgfdfghjkjhgfdsdfghjhgfdsasdfghjhgfdsasdfghjklkjhgfds.weebly.com/uploads/1/1/9/1/119189202/portal_the_flash_version_2.swf" quality="high" pluginspage="//www.macromedia.com/go/getflashplayer" play="true" loop="true" wmode="transparent" allowfullscreen="true" flashvars="" type="application/x-shockwave-flash" align="middle" height="664px" width="1180px"></embed> </object></div></div>
 </body>
 </html>
