--- a/proxy.html
+++ b/proxy.html
@@ -1,63 +1,23 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-  <title>PacketByte Unblocker</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://accounts.pbyte.in/safehamster.css" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-  <!-- header font -->
+<title>Portal flash</title>
+ <style>
+        h1 {color: #40ff00;}
+                a {color: rgb(0, 217, 255); text-shadow: 0px 0px 3px rgb(0, 217, 255); font-weight: bold;}
+  a {cursor: url(https://raw.githubusercontent.com/TheDarkCoder/TheDarkCoder.github.io/master/cursor6pointer.png), auto; display: inline-block;}
+        h1 {cursor: url(https://raw.githubusercontent.com/TheDarkCoder/TheDarkCoder.github.io/master/cusor6text.png), auto; display: inline-block; text-align: center;}    
+        ::selection {background-color:#41ff00; color:black; text-shadow: 0px 0px 2px black;}
+#messageBox  {text-align: center;}
+  #jm {float: left;}
+        body, div, embed, param  {cursor: url(https://raw.githubusercontent.com/TheDarkCoder/TheDarkCoder.github.io/master/cursorsix.png), auto; background-color: black; padding: 0px; margin: 0px;}
+        #border {border: 4px solid rgb(65, 255, 0); position: fixed; top: 0px; bottom: 0px; left: 0px; right: 0px;}
+        #ghr {border-left: 4px solid rgb(65, 255, 0); border-bottom: 4px solid rgb(65, 255, 0); border-right: 4px solid rgb(65, 255, 0);  box-shadow: 0px 0px 6px rgb(65, 255, 0);}
+    </style>
 </head>
-  <body>
-      <form action="/proxy/no-js" method="get" id="unblocker-form">
-      <div class="header">
-         <p>Neutralize Internet</p>
-      </div>
-      <div class="description">
-        <p>PByte is almost ready. If you're interested in testing it out, then sign up at <a href="http://services.packetbyte.net">PacketByte.net</a></p>
-      </div>
-      <div id="error"></div>
-
-      <div class="input">
-        <input type="text" class="button" id="email" name="email" placeholder="www.safehamster.com">
-        <input type="submit" class="button" id="submit" value="GO">
-      </div>
-    </form>
-
-<!-- Intro Section -->
-	<script>
-		function $(id){
-			return document.getElementById(id);
-		}
-		
-		$('unblocker-form').onsubmit = function(){
-			var email = $('email').value;
-			if(email.substr(0,4) != "http"){
-				email = "http://" + email;
-			}
-			window.location.pathname = 'proxy/' + email;
-			return false;
-		}
-		
-		function checkError(){
-			var search = window.location.search;
-			var start = search.indexOf('error=');
-			if(start > -1){
-				var stop = search.indexOf('&', start);
-				if(stop == -1){ stop = undefined; }
-				// +6 for "error="
-				var err = search.substr(start+6, stop);
-				$('error').innerText = $('error').textContent = decodeURIComponent(err);
-				$('error').style.display = "block";
-			}
-		}
-    
-		window.onload = function() { 
-			$('email').focus(); 
-			checkError(); 
-		}
-	</script>
-  
-  
+<body>
+<div id="border">
+<a href="/hacks.txt" id="jm" target="blank">com</a>
+<div class="wsite-flash"><div style="text-align: center;" title="Flash: portal_the_flash_version_2.swf" > <object type="application/x-shockwave-flash" codebase="//download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" align="middle" height="664px" width="1180px" > <param name="movie" value="/uploads/1/1/9/1/119189202/portal_the_flash_version_2.swf"> <param name="quality" value="high"> <param name="play" value="true"> <param name="loop" value="true"> <param name="wmode" value="transparent"> <param name="allowFullScreen" value="true"> <param name="flashvars" value=""> <embed src="https://asdfghjkjhgfdfghjkjhgfdsdfghjhgfdsasdfghjhgfdsasdfghjklkjhgfds.weebly.com/uploads/1/1/9/1/119189202/portal_the_flash_version_2.swf" quality="high" pluginspage="//www.macromedia.com/go/getflashplayer" play="true" loop="true" wmode="transparent" allowfullscreen="true" flashvars="" type="application/x-shockwave-flash" align="middle" height="664px" width="1180px"  id="ghr"></embed></object></div></div>
 </body>
 </html>
