--- a/portal.html
+++ b/portal.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,10 +11,13 @@
 #messageBox  {text-align: center;}
   #jm {float: left;}
         body, div, embed, param  {cursor: url(https://raw.githubusercontent.com/TheDarkCoder/TheDarkCoder.github.io/master/cursorsix.png), auto; background-color: black; padding: 0px; margin: 0px;}
+        #border {border: 4px solid rgb(65, 255, 0); position: fixed; top: 0px; bottom: 0px; left: 0px; right: 0px;}
+        #ghr {border-left: 4px solid rgb(65, 255, 0); border-bottom: 4px solid rgb(65, 255, 0); border-right: 4px solid rgb(65, 255, 0);  box-shadow: 0px 0px 6px rgb(65, 255, 0);}
     </style>
 </head>
 <body>
+<div id="border">
 <a href="/hacks.txt" id="jm" target="blank">com</a>
-<div class="wsite-flash"><div style="text-align: center;" title="Flash: portal_the_flash_version_2.swf" > <object type="application/x-shockwave-flash" codebase="//download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" align="middle" height="664px" width="1180px" > <param name="movie" value="/uploads/1/1/9/1/119189202/portal_the_flash_version_2.swf"> <param name="quality" value="high"> <param name="play" value="true"> <param name="loop" value="true"> <param name="wmode" value="transparent"> <param name="allowFullScreen" value="true"> <param name="flashvars" value=""> <embed src="https://asdfghjkjhgfdfghjkjhgfdsdfghjhgfdsasdfghjhgfdsasdfghjklkjhgfds.weebly.com/uploads/1/1/9/1/119189202/portal_the_flash_version_2.swf" quality="high" pluginspage="//www.macromedia.com/go/getflashplayer" play="true" loop="true" wmode="transparent" allowfullscreen="true" flashvars="" type="application/x-shockwave-flash" align="middle" height="664px" width="1180px"></embed> </object></div></div>
+<div class="wsite-flash"><div style="text-align: center;" title="Flash: portal_the_flash_version_2.swf" > <object type="application/x-shockwave-flash" codebase="//download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" align="middle" height="664px" width="1180px" > <param name="movie" value="/uploads/1/1/9/1/119189202/portal_the_flash_version_2.swf"> <param name="quality" value="high"> <param name="play" value="true"> <param name="loop" value="true"> <param name="wmode" value="transparent"> <param name="allowFullScreen" value="true"> <param name="flashvars" value=""> <embed src="https://asdfghjkjhgfdfghjkjhgfdsdfghjhgfdsasdfghjhgfdsasdfghjklkjhgfds.weebly.com/uploads/1/1/9/1/119189202/portal_the_flash_version_2.swf" quality="high" pluginspage="//www.macromedia.com/go/getflashplayer" play="true" loop="true" wmode="transparent" allowfullscreen="true" flashvars="" type="application/x-shockwave-flash" align="middle" height="664px" width="1180px"  id="ghr"></embed></object></div></div>
 </body>
 </html>
