--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 <a href="/dino.html">T-rex runner</a><br>
     <a href="/dinoV2">T-rex runner custom</a><br>
     <a href="/mar/index.html">Mario</a><br>
-    <a href="/portal.html">Portal flash</a>
+    <a href="/portal.html">Portal old flash</a><br>
+    <a href="/portalnew.html">Portal new flash</a>
 </div>
     </body>
 </html>
