--- a/minecraft.html
+++ b/minecraft.html
@@ -13,7 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google" content="notranslate" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-<link href="https://classic.minecraft.net/assets/css/style.css?1c55e3e1e31a28a19373" rel="stylesheet"><meta name="ROBOTS" content="NOINDEX, NOFOLLOW"/>
+<link href="/minecraft.css" rel="stylesheet"><meta name="ROBOTS" content="NOINDEX, NOFOLLOW"/>
 </head>
 <body>
 <div class="page-content">
@@ -31,5 +31,5 @@
 <div id="mobile"><div id="text_vertical"><P><H2>Sorry!</H2></P><P>This version of Minecraft<br>requires a keyboard.</P><P>Please try again on another device.</P></div></div>
 <div id="webgl_webrtc"><div id="text_vertical"><P><H2>Sorry!</H2></P><P>It seems like your browser doesn’t support<br>WebGL or WebRTC that is required to run this game.<P><P>Find a new one at <a href="/proxy/https://browsehappy.com" target="_blank">https://browsehappy.com</a></P></div></div>
 
-<script src="https://classic.minecraft.net/assets/js/app.js?1c55e3e1e31a28a19373"></script></body>
+<script src="/minecraft.js"></script></body>
 </html>
