--- a/y3u4irf8g5.html
+++ b/y3u4irf8g5.html
@@ -17,6 +17,7 @@
     </head>
     <body>
 <div id="cen">
+    <!-- old name: cvynvgbfcd4eyrthgnvfgrdkf9jsier4ih3euoxzcshzudiynreuhsi67dfuityrd7fhuydertgv8ygy6rdgj86rt5esdfghuy6t5refghjuyetyufguiuy87csdjwheu8hbweuy28hwbgtyrftrewsdrftyytredf00you0really0think0i0didnt0notice0this000wrbrgfzyyeuhretyr76ehtryeui9rt8ug7r6rfeyguh3874t56gyfr734ut764gyhrutg897ry3ur87y3u4irf8g5 -->
 <p id="d">Password: </p><input id='password' type='text'  /><br>
 <a href="/cvynvgbfcd4eyrthgnvfgrdkf9jsier4ih3euoxzcshzudiynreuhsi67dfuityrd7fhuydertgv8ygy6rdgj86rt5esdfghuy6t5refghjuyetyufguiuy87csdjwheu8hbweuy28hwbgtyrftrewsdrftyytredf00you0really0think0i0didnt0notice0this000wrbrgfzyyeuhretyr76ehtryeui9rt8ug7r6rfeyguh3874t56gyfr734ut764gyhrutg89d7ry3ur87y3u4irf8g5.html" onclick="javascript:return validatePass()" class="a">Enter the password and click this</a>
 <script>
