--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <a href="/mar/index.html">Mario</a><br>
     <a href="/portal.html">Portal old flash</a><br>
     <a href="/portalnew.html">Portal new flash</a>
+    <a href="https://login.nvgs.nvidia.com/v1/login?key=eyJhbGciOiJIUzI1NiJ9.eyJzZSI6IlI2WGUiLCJ0b2tlbklkIjoiMjk5NjU4MjczMDc2ODA2MTU1Iiwib3QiOiIyOTk2NTgyNzMxNjA2OTI0ODciLCJpYXQiOjE2MjIwMzUyNDgsImp0aSI6IjRiNGJhNTVlLWIyODUtNGZkOS05NzNiLThjZDFmNDQzZGFlNCJ9.dpUWatpCgwT2VBCKzswwp27jry8WtZSIdfw8RfWUXxk&client_id=262715573294596242&prompt=select_account&context=initial&theme=Dark&preferred_nvidia=true&locale=en-US">GeforceNow</a>
 </div>
     </body>
 </html>
